@@ -25,7 +25,6 @@ public class IncrementalDissolve<T extends Particle> {
 
     //Dissolve the lattice incrementally so that we get as close as possible to the saturation point
     public void dissolve( ItemList<Crystal<T>> crystals, final Crystal<T> crystal, ObservableProperty<Boolean> saturated ) {
-
         while ( !saturated.get() && crystal.numberConstituents() > 0
 
                 //For some unknown reason, limiting this to one dissolve element per step fixes bugs in dissolving the lattices
