@@ -1,3 +1,4 @@
+Micro tab: Fixed draining rate and scheduling for all solute types
 Micro tab: Added draining for other particle types
 Micro tab: Generalized code for flowing toward the drain at constant concentration for reuse by other solutes
 Micro tab: Added FlowOutOfDrainStrategy for particles flowing out of the drain faucet
